<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".ui.stats.StatsFragment">

    <TextView
        android:id="@+id/title_stats"
        style="@style/FragmentTitle"
        android:text="@string/title_stats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/hint_title"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="12dp"
        android:background="@drawable/rectangle_green"
        android:drawablePadding="16dp"
        android:paddingHorizontal="32dp"
        android:paddingVertical="30dp"
        android:text="@string/stats_hint"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/ic_calendar"
        app:drawableTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_stats" />

    <TextView
        android:id="@+id/clear_button"
        style="@style/Subtitle"
        android:background="?selectableItemBackground"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:text="@string/clear_title"
        app:layout_constraintBottom_toBottomOf="@id/title_stats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/title_stats" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/entries_rv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hint_title"
        tools:itemCount="10"
        tools:listitem="@layout/entry_item" />


</androidx.constraintlayout.widget.ConstraintLayout>